--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,18 +3,21 @@ repos:
     rev: 5.4.2
     hooks:
       - id: isort
+        exclude: data_model.py
         language_version: python3.7
         args: [ --line-length=127 ]
   - repo: https://github.com/python/black
     rev: 20.8b1
     hooks:
       - id: black
+        exclude: data_model.py
         language_version: python3.7
         args: [ --line-length=127 ]
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.3
     hooks:
       - id: flake8
+        exclude: data_model.py
         additional_dependencies: [
             flake8-docstrings,
             flake8-builtins,
@@ -31,6 +34,7 @@ repos:
   - repo: local
     hooks:
       - id: pylint
+        exclude: data_model.py
         name: pylint
         entry: pylint
         language: system
